--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
       "value": "document"
     },
     "DATABASE_URI": {
-      "description": "pyrogram string Seccion - https://replit.com/@JijinR/PyroSessionString?v=1",", 
+      "description": "pyrogram string Seccion - https://replit.com/@JijinR/PyroSessionString?v=1",
       "value": ""        
     },
     "buildpacks":
